[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Images/Composition/PlanoPilotoIntro/5-congresso nacional.png" type="Texture" id=1]
[ext_resource path="res://assets/Images/Composition/PlanoPilotoIntro/Em_Conversa (2).png" type="Texture" id=2]
[ext_resource path="res://scenes/AuxScenes/ChatBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Images/Composition/Jogador/JOGADOR.png" type="Texture" id=4]
[ext_resource path="res://assets/Images/Composition/PlanoPilotoIntro/ícone_fala.png" type="Texture" id=5]
[ext_resource path="res://scenes/dialogs/Esplanada/IsraeldaSilva.gd" type="Script" id=6]
[ext_resource path="res://assets/Styles/Themes/CharacterChoice.tres" type="Theme" id=7]
[ext_resource path="res://assets/Fonts/bebas_neue/BebasNeue-Regular.otf" type="DynamicFontData" id=8]
[ext_resource path="res://scenes/AuxScenes/PlayerBackPack.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 34
outline_color = Color( 0.215686, 0.298039, 0.388235, 1 )
font_data = ExtResource( 8 )

[node name="IsraeldaSilva" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="Congresso" type="Sprite" parent="."]
position = Vector2( 787, 135 )
scale = Vector2( 1.53891, 1.52759 )
texture = ExtResource( 1 )

[node name="IsraeldaSilva" type="Sprite" parent="."]
position = Vector2( 297, 374 )
texture = ExtResource( 2 )

[node name="ChatBox" parent="." instance=ExtResource( 3 )]
margin_left = -79.0
margin_top = 160.0
margin_right = 17.0
margin_bottom = 208.0
chat = "P*O que está acontecendo por aqui? O que é toda essa gente?
*I*Isso tudo é o reflexo de uma ameaça retornista, que deseja levar a capital de volta para Guanabara. Não podemos deixar que isso aconteça. Minha família precisa e depende que a capital permaneça aqui. Viemos do nosso estado para dar certo.
*P* Ah, mas eu duvido que exista um risco de acabar com a nova capital…  
*I*Não sei ao certo! Sei que meu pai me falou que os deputados querem voltar para o Rio de Janeiro e que Brasília pode não ser mais a capital. Vamos lutar pelos nossos direitos e permanecer aqui até uma resposta das promessas desse governo. 
*P*Sua família também está aqui? 
*I*Minha família está na Vila Planalto, onde moramos aqui em Brasília."
img = [ ExtResource( 4 ), ExtResource( 5 ) ]
cha = [ "P", "I" ]
image_scales = [ Vector2( 0.1, 0.1 ), Vector2( 0.67, 0.685 ) ]
nam = [ "Historiadora", "Israel da Silva" ]
resize_panel = [ Vector2( 113, 26 ), Vector2( 120, 26 ) ]

[node name="PopWindow" type="WindowDialog" parent="."]
margin_left = 185.0
margin_top = 163.0
margin_right = 723.0
margin_bottom = 342.0
theme = ExtResource( 7 )

[node name="Label" type="Label" parent="PopWindow"]
margin_left = 7.0
margin_top = 19.0
margin_right = 535.0
margin_bottom = 223.0
custom_colors/font_color = Color( 0.215686, 0.298039, 0.388235, 1 )
custom_fonts/font = SubResource( 1 )
text = "às 16h, um político está saindo do congresso e indo para a multidão"
align = 1
autowrap = true

[node name="PlayerBackPack" parent="." instance=ExtResource( 9 )]
visible = false

[connection signal="end_dialog" from="ChatBox" to="." method="_on_ChatBox_end_dialog"]
[connection signal="popup_hide" from="PopWindow" to="." method="_on_PopWindow_popup_hide"]
